# src/routes/api-v1.ts
@@ -4,6 +4,7 @@ import { gameRouter } from './game'
 import { playerRouter } from './player'
 import { guardRouter } from './guard'
 import { deathRouter } from './death'
+import { winnerRouter } from './winner'
 
 export const apiV1Router: Router = Router()
 
@@ -11,3 +12,4 @@ apiV1Router.use('/game', gameRouter)
 apiV1Router.use('/player', playerRouter)
 apiV1Router.use('/guard', guardRouter)
 apiV1Router.use('/death', deathRouter)
+apiV1Router.use('/winner', winnerRouter)
